Update to 3.6.22