@@ -15,6 +15,7 @@ import net.minecraft.world.entity.ai.goal.LookAtPlayerGoal;
 import net.minecraft.world.entity.ai.goal.RandomLookAroundGoal;
 import net.minecraft.world.entity.ai.goal.WaterAvoidingRandomStrollGoal;
 import net.minecraft.world.entity.ai.goal.target.HurtByTargetGoal;
+import net.minecraft.world.entity.ai.memory.MemoryModuleType;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
@@ -48,7 +49,7 @@ public class LeafyGiantEntity extends AoAMeleeMob<LeafyGiantEntity> {
 
 	@Override
 	protected Brain.Provider<LeafyGiantEntity> brainProvider() { // TODO
-		return Brain.provider(ImmutableList.of(), ImmutableList.of());
+		return Brain.provider(List.of(MemoryModuleType.ATTACK_TARGET), ImmutableList.of());
 	}
 
 	@Override
